[package]
name = "rot8"
version = "1.0.0"
authors = ["efernau <e.fernau@efero.de>", "deadly_platypus <mail@geth.systems>", "nicola-sorace"]
license = "MIT"
description = "automatic display rotation using built-in accelerometer"
homepage = "https://github.com/efernau/rot8"
documentation = "https://github.com/efernau/rot8"
repository = "https://github.com/efernau/rot8"
keywords = ["sway", "x11", "display", "rotation"]
edition = "2018"

[dependencies]

[profile.release]
strip = true
lto = true
